# img-processing-cuda

./: README.md
src/: main.cu
src/c++/: Makefile
src/cpu/: CMakeLists.txt  Makefile  README.txt  bench_non_local_means_cpu.cpp  convolution.cpp  convolution.hh  edge_detect.cpp  edge_detect.hh  knn.cpp  knn.hh  main.cpp  non_local_means_cpu.cpp  non_local_means_cpu.hh  timer.hh  timer_test.cc
src/cpu/bench/: Makefile  bench_edge_detect.cpp  bench_knn.cpp  bench_non_local_means_cpu.cpp  benchs.ipynb  nlm.txt  nlm2.txt
src/cpu/fft/: DFT_cpu.cpp  Makefile  test_opencv.cpp
src/gpu/: CMakeLists.txt  Makefile  kernel.cu  kernel.cuh  kernel.hh  kernelcall.cu  kernelcall.cuh  main.cpp  main.cu
src/gpu/bench/: CMakeLists.txt  bench_non_local_means_gpu.cu  benchs.ipynb  timer.hh
src/gpu/bench/.ipynb_checkpoints/: benchs-checkpoint.ipynb
src/utils/: utils.cpp  utils.hh
